[package]
name = "fan_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sysfs"]
sysfs = ["sysfs_gpio"]

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33"
structopt = "0.3.25"
sysfs_gpio = {version = "0.6", optional=true}
